Support more constant types (#11)
* Added support for byte, short, and char simple constants

* Added support for byte and short flag constants